--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="index.html" title="Home page">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About me</a>
+            <a class="nav-link" href="about.html" title="About Mpho Mabushe">About me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html#contact">Contact me</a>
+            <a class="nav-link" href="about.html#contact" title="Contact Mpho">Contact me</a>
           </li>
         </ul>
       </div>
@@ -58,7 +58,7 @@
           explicabo eum dolore.
         </p>
         <div class="mt-5">
-          <a href="#" class="primary-link">Launch Yoga App</a>
+          <a href="#" class="primary-link" title="Yoga app">Launch Yoga App</a>
         </div>
       </div>
     </div>
@@ -72,7 +72,7 @@
           explicabo eum dolore.
         </p>
         <div class="mt-5">
-          <a href="#" class="primary-link">Launch Weather App</a>
+          <a href="#" class="primary-link" title="weather app">Launch Weather App</a>
         </div>
       </div>
       <div class="col-6">
@@ -92,7 +92,7 @@
           explicabo eum dolore.
         </p>
         <div class="mt-5">
-          <a href="#" class="primary-link">Launch Weather App</a>
+          <a href="#" class="primary-link" title="Yoghurt app">Launch Yoghurt App</a>
         </div>
       </div>
     </div>
